--- a/index.html
+++ b/index.html
@@ -1,7 +1,130 @@
-//hello
-//holu
-//holu
-//holu
-//holu
-//holu
-//holu
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="author" content="Rafael Martin">
+    <meta name="copyright" content="Propietario del copyright" />
+    <meta name="description" content="Somos una Agencia digital 360º especializada en posicionamiento de marca. Especialistas en UX (User Experience) y UI (User Interface)">
+    <meta name="keywords" content="Agencia,Diseño,Branding,UX,UI,Marketing" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Logo - Agencia Digital 360°</title>
+<!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+<!-- Favicon -->
+<!-- CSS -->
+    <link rel="stylesheet" href="css/estilos.css">
+    <link href = "https: //fonts.googleapis.com/css2? family = Roboto: ital, wght @ 0,100; 0,400; 0,700; 1,100; 1,400; 1,900 & display = swap "rel =" stylesheet ">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<!-- CSS -->
+  </head>
+  <body>
+<!-- Inicio Header -->
+    <header>
+      <div class="container">
+        <div class="Top">
+                <div class="Logo">
+                  <ul>
+                        <li><img src="img/logo-gd.png" alt="logo"></li>
+                  </ul>
+                </div>
+                <div class="redesSociales">
+                  <ul>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Whatsapp</a></li>
+                  </ul>    
+                </div> 
+        </div>        
+      </div>       
+    </header>
+<!-- Fin Header -->
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="branding.html">Branding</a></li>
+              <li><a class="dropdown-item" href="uxui.html">UX-UI</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
+<!-- Fin Nav -->
+<!-- Inicio Contenido Home -->    
+    <section id="contenidoHome">
+      <h1>Agencia Digital de diseño</h1>
+      <div class="container">
+        <div class="grid">     
+              <div class="cuerpoTextos1">
+                  <h2 class="cuerpoTextos1Titulos">Inmersión</h2>
+                    <p>La industria del diseño UX/UI está en constante transformación. Este año, la tendencia indica  que el contenido animado tendrá más protagonismo, desde pequeñas interacciones mobile y web, hasta logotipos e interfaces (UI).</p>
+              </div>
+              <div class="cuerpoTextos2">
+                  <h2 class="cuerpoTextos2Titulos">Estrategia</h2>
+                    <p>LDel mismo modo en que no se puede construir un edificio sin los planos, el arquitecto no puede idear un proyecto sin tener claridad sobre el objetivo de la construcción, a quién va destinado o el terreno donde se construirá. 
+
+                      Lo mismo ocurre con el diseño UX/UI, el contenido es la referencia para saber qué se quiere comunicar y cómo hacerlo. </p>
+              </div>
+              <div class="cuerpoTextos3">
+                  <h2 class="cuerpoTextos3Titulos">Implementación</h2>
+                    <p>Esta nueva tendencia del UX permite crear conexiones y cercanía con los usuarios de ecommerce, principalmente. Además, transfiere emociones de la marca a través de un producto de la manera más informativa y creativa posible.</p>
+              </div>
+              <div class="cuerpoTextos4">
+                  <h2 class="cuerpoTextos4Titulos">Análisis</h2>
+                    <p>Los  textos informales y cercanos llegaron para quedarse. Los usuarios ya están aburridos de leer frases clásicas en ecommerce o en  tiendas online, por eso resulta imprescindible cambiar el estilo de comunicación. </p>
+                    <a href="https://design.google/" rel="nofollow" target="_blank">Ver en Google</a>
+              </div>
+              <div class="cuerpoTextos5">
+                  <h2 class="cuerpoTextos5Titulos">Análisis</h2>
+                    <p>El SEO (serie de estrategias para un mejor posicionamiento en los buscadores) va dando fruto mes a mes, el SEM (acciones de marketing pagas para mejorar el posicionamiento web) es una inversión de tiempo y dinero que brinda resultados más rápidos.</p>
+              </div>
+              <div class="cuerpoTextos6">
+                  <h2 class="cuerpoTextos6Titulos">Análisis</h2>
+                    <p>Para utilizar esta opción se emplea el signo + por delante de cada keyword con la finalidad de obligar a que las búsquedas posean indefectiblemente todas las palabras marcadas con dicho símbolo.</p>
+              </div>
+            </div>
+      </div>  
+    </section>
+<!-- Fin Contenido Home -->
+
+<!-- Inicio Footer -->
+    <footer>
+      <div class="container">
+        <p><strong>Todos los derechos reservados</strong></p>
+      </div>
+    </footer>
+<!-- Fin Footer -->
+<!-- JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>   
+  </body>
+</html>
